WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75667
Crash when trying to invalidate the NPRuntimeObjectMap for a plug-in in a subframe
https://bugs.webkit.org/show_bug.cgi?id=75667
Summary
Crash when trying to invalidate the NPRuntimeObjectMap for a plug-in in a sub...
Anders Carlsson
Reported
2012-01-05 16:01:27 PST
Crash when trying to invalidate the NPRuntimeObjectMap for a plug-in in a subframe
Attachments
Patch
(11.30 KB, patch)
2012-01-05 16:11 PST
,
Anders Carlsson
kdecker
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-01-05 16:11:13 PST
Created
attachment 121361
[details]
Patch
Anders Carlsson
Comment 2
2012-01-05 16:29:24 PST
Committed
r104239
: <
http://trac.webkit.org/changeset/104239
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug